--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "htmltemplates",
+  "name": "basic-html-templates",
   "version": "1.0.0",
   "description": "Templates for basic html page",
   "main": "index.js",
